ApiRestFull Financeiro dash/transac/estatistica/Banco